--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </h1>
               </div>
               <p class="home-caption">
-                <span>Stworzone i hostowane przez</span>
+                <span>Stworzone i przetwarzane przez</span>
                 <span class="home-text08">Filipa Adamczaka</span>
               </p>
             </div>
@@ -373,7 +373,7 @@
                   <span>Repozytorium mediów</span>
                   <span class="home-text21">SP Limerick</span>
                   <br />
-                  <span>Stworzone i hostowane przez</span>
+                  <span>Stworzone i przetwarzane przez</span>
                   <span class="home-text24">Filip Adamczaka</span>
                   <br />
                   <span></span>
