--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       data-tag="font"
     />
     <!--This is the head section-->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "gxp3l5pkmu");
+</script>
     <!-- <style> ... </style> -->
     <link
       rel="stylesheet"
