--- a/index.html
+++ b/index.html
@@ -342,21 +342,19 @@
           <div class="home-content2">
             <div class="home-header6">
               <h2 class="home-heading2">
-                <span class="home-text13">Nie możesz czegoś znaleźć?</span>
-                <br class="home-text14" />
-                <span class="home-text15"></span>
-                <span class="home-text16">Sprawdź archiwum!</span>
+                <span class="home-text13">Nie możesz znaleźć?</span>
+                <span class="home-text14">Skontaktuj się ze mną!</span>
                 <br />
               </h2>
             </div>
             <a
-              href="https://archive.filipadamczak.com"
+              href="https://mailto:contact@filipadamczak.com"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link09 button"
             >
-              <span class="home-text18">
-                <span>Sprawdź archiwum</span>
+              <span class="home-text16">
+                <span>Skontaktuj Się!</span>
                 <br />
               </span>
             </a>
@@ -378,12 +376,12 @@
                     class="home-image2"
                   />
                 </a>
-                <span class="home-text21">
+                <span class="home-text19">
                   <span>Repozytorium mediów</span>
-                  <span class="home-text23">SP Limerick</span>
+                  <span class="home-text21">SP Limerick</span>
                   <br />
                   <span>Stworzone i przetwarzane przez</span>
-                  <span class="home-text26">Filip Adamczaka</span>
+                  <span class="home-text24">Filip Adamczaka</span>
                   <br />
                   <span></span>
                 </span>
