--- a/index.html
+++ b/index.html
@@ -342,20 +342,20 @@
           <div class="home-content2">
             <div class="home-header6">
               <h2 class="home-heading2">
-                <span class="home-text13">Nie możesz znaleźć?</span>
+                <span class="home-text13">Nie możesz czegoś znaleźć?</span>
                 <br />
-                <span class="home-text14">Skontaktuj się ze mną!</span>
+                <span class="home-text14">Sprawdź archiwum!</span>
                 <br />
               </h2>
             </div>
             <a
-              href="https://mailto:contact@filipadamczak.com"
+              href="https://archive.filipadamczak.com"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link09 button"
             >
               <span class="home-text16">
-                <span>Skontaktuj Się!</span>
+                <span>Sprawdź archiwum!</span>
                 <br />
               </span>
             </a>
