Updated with new links and added mailing list

--- a/index.html
+++ b/index.html
@@ -205,13 +205,30 @@
                     </svg>
                   </div>
                   <a
-                    href="https://filipadamczak-my.sharepoint.com/personal/filip_filipadamczak_com/_layouts/15/guestaccess.aspx?folderid=02a0b599914494389ad42251183e16175&amp;authkey=AcMAd1RqOwuYoLuSxH-uqhs&amp;e=JnrC5P"
+                    href="https://filipadamczak-my.sharepoint.com/:f:/p/filip/EhIS1R_nknlBhQpLlQH2P2MB4C6TJsBLwmuwkPVZzD6kQg?e=gizmLV"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="home-link01"
                   >
-                    <span>Wycieczka do Cobh i Spike Island</span>
+                    <span>Zakończenie Roku 2022-2023</span>
                     <br />
+                  </a>
+                </div>
+                <div class="home-check7">
+                  <div class="home-mark7">
+                    <svg viewBox="0 0 1024 1024" class="home-icon22">
+                      <path
+                        d="M823.168 225.835l-439.168 439.168-183.168-183.168c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331l213.333 213.333c16.683 16.683 43.691 16.683 60.331 0l469.333-469.333c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0z"
+                      ></path>
+                    </svg>
+                  </div>
+                  <a
+                    href="https://filipadamczak-my.sharepoint.com/personal/filip_filipadamczak_com/_layouts/15/guestaccess.aspx?folderid=02a0b599914494389ad42251183e16175&amp;authkey=AcMAd1RqOwuYoLuSxH-uqhs&amp;e=JnrC5P"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link08"
+                  >
+                    Wycieczka do Cobh i Spike Island
                   </a>
                 </div>
                 <div class="home-check1">
@@ -358,9 +375,11 @@
                 <span>Sprawdź archiwum!</span>
                 <br />
               </span>
-            </a>
+              </a>
           </div>
         </section>
+        <iframe width="540" height="700" src="http://eepurl.com/its6Gs" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;">
+        </iframe>
         <div class="home-footer">
           <div class="home-content3">
             <div class="home-main">
