--- a/index.html
+++ b/index.html
@@ -378,8 +378,9 @@
               </a>
           </div>
         </section>
-        <iframe width="540" height="700" src="http://eepurl.com/its6Gs" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;">
-        </iframe>
+        <embed src="http://eepurl.com/its6Gs"
+               width="540" 
+               height="700" />
         <div class="home-footer">
           <div class="home-content3">
             <div class="home-main">
