--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
               </a>
           </div>
         </section>
-        <embed src="http://eepurl.com/its6Gs"
+        <embed src="https://filipadamczak.us5.list-manage.com/subscribe?u=f124d68662324e02d88f538dc&id=0c254479d3"
                width="540" 
                height="700" />
         <div class="home-footer">
