--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           'iPhone',
           'iPad',
           'Windows Phone'
+          'Chrome/114.0.0.0 Mobile'
         ];
   
         var isMobile = false;
